# VXLAN-CONTROL-PLANE-SERVER

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  demo.bat  demo.sh  render.yaml
benchmarks/: gpu-comparison.rs  gpu_validation_suite.rs
config/: symmetrix.toml
crates/symmetrix-galois/: Cargo.toml
crates/symmetrix-galois/src/: lib.rs
crates/symmetrix-sheaf/: Cargo.toml
crates/symmetrix-sheaf/src/: lib.rs
crates/symmetrix-tensor/: Cargo.toml
crates/symmetrix-tensor/src/: lib.rs
kernel/: Makefile  load_modules.sh  symmetrix-core.c  symmetrix-galois.c  symmetrix-msi-fpga.c  symmetrix.h
qagml/: .gitignore  Cargo.toml  README.md  build.rs
qagml/src/: bus_width_amplification.rs  core.rs  cuda_ffi.rs  engine.rs  lib.rs  model_loader.rs
qagml/src/cuda/: qagml_kernel.cu
qanban/: .gitignore  Cargo.toml  README.md
qanban/benches/: qanban_benchmark.rs
qanban/src/: core.rs  engine.rs  lib.rs  qanban_benchmark.rs  qanban_branch_free.rs  qanban_cargo.toml  qanban_cli.rs  qanban_core.rs  qanban_dimensional_folding.rs  qanban_engine.rs  qanban_galois_field.rs  qanban_laplacian_qlearning.rs  qanban_lib.rs  qanban_pme_engine.rs  qanban_quantum_cache.rs  qanban_simd_vectorization.rs  qanban_spectral_graph.rs  qanban_temporal_coherence.rs  qanban_tensor_decomposition.rs
qanban/src/postulates/: branch_free.rs  dimensional_folding.rs  galois_field.rs  laplacian_qlearning.rs  mod.rs  pme_engine.rs  quantum_cache.rs  simd_vectorization.rs  spectral_graph.rs  temporal_coherence.rs  tensor_decomposition.rs
scripts/: build_fabric_executable.sh  linux-deploy.sh  run_gpu_validation.sh  symmetrix-daemon.service
src/: bandwidth_cascade.rs  lib.rs  qagml_integration.rs  qanban_integration.rs  uao_qtcam_integration.rs
src/gfef/: api.rs  mod.rs  websocket.rs
uao-qtcam/: .gitignore  Cargo.toml  README.md  all_phases_benchmark_results.txt  all_phases_comparison_results.txt  benchmark_results.txt  phase3_v2_benchmark_results.txt  phase3_v3_ultimate_benchmark_results.txt  revolutionary_benchmark_results.txt  test_api.sh  test_quick.sh
uao-qtcam/benches/: all_phases_benchmark.rs  performance.rs  phase3_v2_revolutionary_benchmark.rs  phase3_v3_ultimate_benchmark.rs  revolutionary_benchmark.rs
uao-qtcam/src/: lib.rs  main.rs
uao-qtcam/src/api/: mod.rs  models.rs  routes.rs
uao-qtcam/src/phase1/: algebraic_heterodyning.rs  frobenius_compression.rs  galois_field.rs  mod.rs
uao-qtcam/src/phase2/: dimensional_folding.rs  hardware_hints.rs  mod.rs  qagfhg_engine.rs  qagfhg_v2_engine.rs  quantum_state.rs  spectral_analysis.rs
uao-qtcam/src/phase3/: dimensional_folding.rs  laplacian_qlearning.rs  mod.rs  pme_engine.rs  scrtt_engine.rs  scrtt_v2_engine.rs  scrtt_v3_engine.rs  simd_vectorization.rs  tensor_decomposition.rs
uao-qtcam/src/unified/: control_plane.rs  mod.rs  performance_monitor.rs  tcam_engine.rs
uao-qtcam/tests/: concurrent_phase_test.rs
