[package]
name = "symmetrix-core"
version = "0.1.0"
edition = "2021"
authors = ["SYMMETRIX COMPUTING LTD"]
description = "Revolutionary CPU-native mathematical operating system replacing GPU computing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symmetrix-computing/symmetrix-core"
keywords = ["hpc", "virtualization", "mathematics", "sheaf-theory", "galois-fields"]
categories = ["mathematics", "virtualization", "os"]

[workspace]
members = [
    "crates/symmetrix-sheaf",
    "crates/symmetrix-galois",
    "crates/symmetrix-tensor", "symmetrix-qwen3-poc",
]

[dependencies]
# Workspace crates
symmetrix-sheaf = { path = "crates/symmetrix-sheaf" }
symmetrix-galois = { path = "crates/symmetrix-galois" }
symmetrix-tensor = { path = "crates/symmetrix-tensor" }

# QANBAN Integration - Quantum-Accelerated Network Bandwidth Amplification
qanban = { path = "../QUANTUM-ACCELERATED-NETWORK-BANDWIDTH-OPTIMIZATION-QANBA-" }

# QAGML Integration - Quantum-Accelerated GPU Memory Lookup (10M× memory + 2M× bus width amplification)
qagml = { path = "../GPU-MEMORY-UPGRADE" }

# UAO-QTCAM Integration - Unified Software-Defined TCAM (1,250× speedup over hardware TCAM)
uao-qtcam-unified = { path = "../UAO-QTCAM" }

# Core mathematical libraries
num-bigint = "0.4"
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.32"
ndarray = "0.15"

# Async runtime and system integration
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Memory management and performance
memmap2 = "0.9"
rayon = "1.8"
crossbeam = "0.8"

# Cryptography and security
ring = "0.17"
rustls = "0.21"

# System integration
libc = "0.2"
nix = "0.27"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[[bin]]
name = "symmetrix-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "symmetrix-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "symmetrix-gpu-benchmark"
path = "benchmarks/gpu-comparison.rs"

[[bin]]
name = "symmetrix-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "symmetrix-fabric"
path = "src/bin/symmetrix_fabric.rs"

[features]
default = ["sheaf-scheduler", "galois-acceleration", "tensor-folding", "qanban-integration", "qagml-integration", "uao-qtcam-integration"]
sheaf-scheduler = []
galois-acceleration = []
tensor-folding = []
quantum-matrix = []
group-ring-convolution = []
kernel-integration = []
qanban-integration = []
qagml-integration = []
uao-qtcam-integration = []
