[package]
name = 'qagml'
version = '1.0.0'
edition = '2021'
authors = ['LUXERON']
description = 'Quantum-Accelerated GPU Memory Lookup - 10,000,000x amplification'
license = 'MIT'
repository = 'https://github.com/LUXERON/GPU-MEMORY-UPGRADE'
build = 'build.rs'

[features]
default = []
cuda = []

[dependencies]
tokio = { version = '1.35', features = ['full'] }
ndarray = { version = '0.15', features = ['rayon'] }
nalgebra = '0.32'
rustfft = '6.1'
num-complex = '0.4'
crossbeam = '0.8'
dashmap = '5.5'
parking_lot = '0.12'
rayon = '1.8'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
bincode = '1.3'
anyhow = '1.0'
thiserror = '1.0'
clap = { version = '4.4', features = ['derive'] }
tracing = '0.1'
tracing-subscriber = { version = '0.3', features = ['env-filter'] }
prometheus = '0.13'
criterion = { version = '0.5', features = ['html_reports'] }
rand = '0.8'

[dev-dependencies]
proptest = '1.4'

[build-dependencies]
cc = '1.0'

[[bin]]
name = 'qagml-cli'
path = 'src/bin/qagml_cli.rs'

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = 'abort'
strip = true

[profile.bench]
inherits = 'release'
