[package]
name = "symmetrix-sheaf"
version = "0.1.0"
edition = "2021"
authors = ["SYMMETRIX COMPUTING LTD"]
description = "Sheaf-cohomological resource orchestration engine"
license = "MIT OR Apache-2.0"

[dependencies]
num-bigint = "0.4"
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.32"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"


