[package]
name = "symmetrix-tensor"
version = "0.1.0"
edition = "2021"
authors = ["SYMMETRIX COMPUTING LTD"]
description = "Cache-aware tensor folding and Morton encoding for Symmetrix memory optimization"
license = "MIT OR Apache-2.0"

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
rayon = "1.8"
memmap2 = "0.9"

# Cache optimization
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.8"

[features]
default = ["morton-encoding", "cache-optimization"]
morton-encoding = []
cache-optimization = []
hilbert-curves = []


